@@ -59,6 +59,8 @@ apt (0.8.16~exp14) UNRELEASED; urgency=low
     - move the command synopsis out of each manpage into apt-verbatim.ent
       as they are a hell to translate and just single out the parameters
       which can be translated to apt.ent
+  * apt-pkg/aptconfiguration.cc:
+    - if present, prefer xz binary over lzma
 
   [ Bogdan Purcareata ]
   * doc/apt-get.8.xml:
@@ -68,7 +70,7 @@ apt (0.8.16~exp14) UNRELEASED; urgency=low
       number of auto-removed packages both before and after the list
       of packages (Closes: #665833)
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 05 Apr 2012 11:55:30 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 05 Apr 2012 18:39:51 +0200
 
 apt (0.8.16~exp13) experimental; urgency=low
 
